--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
+    "date-fns": "^2.30.0",
+    "next": "^13.5.4",
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0"
