--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "next": "^13.5.4",
