--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "next": "^13.5.4",
+    "next-themes": "^0.2.1",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
